# gvtext

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: pre-commit.yml
config/: settings.py  urls.py
core/: models.py  serializers.py  urls.py  views.py
